--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,585 @@
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+/* @import url('../tailwind.config.js'); */
+@import url('../node_modules/tailwindcss/base.css');
+@import url('../node_modules/tailwindcss/components.css');
+@import url('../node_modules/tailwindcss/utilities.css');
+
+:root {
+  --foreground-rgb: 0,0,0;
+  --background-start-rgb: 214,219,220;
+  --background-end-rgb: 255,255,255;
+}
+/* *, ::after, ::before {
+  --tw-border-spacing-x: 0;
+  --tw-border-spacing-y: 0;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-pan-x: ;
+  --tw-pan-y: ;
+  --tw-pinch-zoom: ;
+  --tw-scroll-snap-strictness: proximity;
+  --tw-gradient-from-position: ;
+  --tw-gradient-via-position: ;
+  --tw-gradient-to-position: ;
+  --tw-ordinal: ;
+  --tw-slashed-zero: ;
+  --tw-numeric-figure: ;
+  --tw-numeric-spacing: ;
+  --tw-numeric-fraction: ;
+  --tw-ring-inset: ;
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgba(59,130,246,.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  --tw-blur: ;
+  --tw-brightness: ;
+  --tw-contrast: ;
+  --tw-grayscale: ;
+  --tw-hue-rotate: ;
+  --tw-invert: ;
+  --tw-saturate: ;
+  --tw-sepia: ;
+  --tw-drop-shadow: ;
+  --tw-backdrop-blur: ;
+  --tw-backdrop-brightness: ;
+  --tw-backdrop-contrast: ;
+  --tw-backdrop-grayscale: ;
+  --tw-backdrop-hue-rotate: ;
+  --tw-backdrop-invert: ;
+  --tw-backdrop-opacity: ;
+  --tw-backdrop-saturate: ;
+  --tw-backdrop-sepia: ;
+} */
+*, ::after, ::before {
+  border: 0 solid #e5e7eb;
+    border-top-width: 0px;
+    border-top-color: rgb(229, 231, 235);
+    border-right-width: 0px;
+    border-right-color: rgb(229, 231, 235);
+    border-bottom-width: 0px;
+    border-bottom-color: rgb(229, 231, 235);
+    border-left-width: 0px;
+    border-left-color: rgb(229, 231, 235);
+  box-sizing: border-box;
+}
+
+:root {
+  --p: 50 96% 43%;
+  --pf: 50 96% 36%;
+  --sf: 210 2% 11%;
+  --af: 142 71% 38%;
+  --nf: 0 0% 93%;
+  --b2: 0 0% 93%;
+  --b3: 0 0% 86%;
+  --bc: 146 0% 19%;
+  --pc: 46 48% 12%;
+  --sc: 210 1% 82%;
+  --ac: 131 32% 12%;
+  --nc: 146 0% 19%;
+  --inc: 190 35% 12%;
+  --suc: 135 29% 13%;
+  --wac: 31 56% 13%;
+  --erc: 6 39% 14%;
+  --rounded-box: 1rem;
+  --rounded-btn: 0.5rem;
+  --rounded-badge: 1.9rem;
+  --animation-btn: 0.25s;
+  --animation-input: .2s;
+  --btn-text-case: uppercase;
+  --btn-focus-scale: 0.95;
+  --border-btn: 1px;
+  --tab-border: 1px;
+  --tab-radius: 0.5rem;
+  --s: 210 2% 18%;
+  --a: 142 71% 45%;
+  --n: 0 0% 100%;
+  --b1: 0 0% 100%;
+  --in: 187 100% 42%;
+  --su: 142 69% 58%;
+  --wa: 36 100% 50%;
+  --er: 1 83% 63%;
+}
+/* :root {
+  --default-color: #0060e5;
+  --default-text-color: #cbe1ff;
+  --white: #ffffff;
+  --black--first: #363e4d;
+  --black--second: #242933;
+  --main-black: #161a20;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  -webkit-tap-highlight-color: transparent; /* transparent with keyword */
+  /* -webkit-tap-highlight-color: rgba(0, 0, 0, 0); transparent with rgba */
+  /* -webkit-tap-highlight-color: hsla(0, 0, 0, 0); transparent with hsla */
+  /* -webkit-tap-highlight-color: #00000000; transparent with hex with alpha */
+  /* -webkit-tap-highlight-color: #0000; transparent with short hex with alpha */
+/* }  */
+
+body {
+  background-image: url("/public/Calc.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .App {
-  text-align: center;
+  display: grid;
+  grid-auto-rows: 539px;
+  padding: 1rem 0rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+body {
+  background-color: #e5e5e5;
+  display: grid;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  grid-template-columns: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+body::-webkit-scrollbar {
+  display: none !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+/* ///////////////////////////////////// */
+@media (min-width: 1024px) {
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (min-width: 1024px) {
+  .lg\:pt-24 {
+    padding-top: 6rem;
   }
+}
+@media (min-width: 768px) {
+  .md\:pb-10 {
+    padding-bottom: 2.5rem;
+  }
+}
+@media (min-width: 640px) {
+  .sm\:pb-8 {
+    padding-bottom: 2rem;
+  }
+}
+.pt-20 {
+  padding-top: 5rem;
+}
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+.w-full {
+  width: 100%;
+}
+.h-screen {
+  height: 100vh;
+}
+
+@media (min-width: 1024px) {
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+@media (min-width: 640px) {
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.flex-1 {
+  flex: 1 1;
+}
+.max-w-7xl {
+  max-width: 80rem;
+}
+.h-full {
+  height: 100%;
+}
+.flex {
+  display: flex;
+}
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+.gap-2 {
+  gap: .5rem;
+}
+.justify-center {
+  justify-content: center;
+}
+.items-center {
+  align-items: center;
+}
+.flex-col {
+  flex-direction: column;
+}
+.w-full {
+  width: 100%;
+}
+.flex {
+  display: flex;
+}
+
+.bg-glass {
+  --tw-backdrop-blur: blur(16px);
+  --tw-backdrop-brightness: brightness(1.5);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  background-color: hsla(0,0%,98%,.4);
+}
+.shadow-xl {
+  
+  --tw-shadow: 0 20px 25px -5px rgba(0,0,0,.1),0 8px 10px -6px rgba(0,0,0,.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color),0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: 0 0 #0000,0 0 #0000,var(--tw-shadow);
+  box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
+}
+.pt-2 {
+  padding-top: .5rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.rounded-xl {
+  border-radius: .75rem;
+}
+.gap-2 {
+  gap: .5rem;
+}
+.justify-between {
+  justify-content: space-between;
+}
+.items-start {
+  align-items: flex-start;
+}
+.flex-col {
+  flex-direction: column;
+}
+.max-w-\[300px\] {
+  max-width: 300px;
+}
+.w-full {
+  width: 100%;
+}
+.flex {
+  display: flex;
+}
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.flex {
+  display: flex;
+}
+.flex {
+  display: flex;
+}
+.flex {
+  display: flex;
+}
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgba(0,0,0,.1),0 8px 10px -6px rgba(0,0,0,.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color),0 8px 10px -6px var(--tw-shadow-color);
+}
+.bg-glass {
+  --tw-backdrop-blur: blur(16px);
+  --tw-backdrop-brightness: brightness(1.5);
+}
+
+.text-right {
+  text-align: right;
+}
+.p-4 {
+  padding: 1rem;
+}
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246/var(--tw-bg-opacity));
+}
+.rounded-md {
+  border-radius: .375rem;
+}
+.overflow-hidden {
+  overflow: hidden;
+}
+.w-full {
+  width: 100%;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.text-right {
+  text-align: right;
+}
+.p-4 {
+  padding: 1rem;
+}
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246/var(--tw-bg-opacity));
+}
+.rounded-md {
+  border-radius: .375rem;
+}
+.overflow-hidden {
+  overflow: hidden;
+}
+.w-full {
+  width: 100%;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.h-7 {
+  height: 1.75rem;
+}
+.mb-2 {
+  margin-bottom: .5rem;
+}
+.font-bold {
+  font-weight: 700;
+}
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+.overflow-hidden {
+  overflow: hidden;
+}
+.h-8 {
+  height: 2rem;
+}
+/* .btn-error .btn-error .btn-active {
+  
+} */
+.btn-error {
+  tw-border-opacity--tw-border-opacity: 1;
+  background-color: hsl(1 83% 63%/var(--tw-bg-opacity)) !important;
+  background-color: hsl(var(--er)/var(--tw-bg-opacity));
+  border-color: hsl(var(--er)/var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  --tw-text-opacity: 1;
+  color: hsl(6 39% 14%/var(--tw-text-opacity));
+  color: hsl(var(--erc)/var(--tw-text-opacity));
+  outline-color: #ef5552;
+  outline-color: hsl(var(--er)/1);
+}
+.btn-circle {
+  border-radius: 9999px;
+  height: 3rem;
+  padding: 0;
+  width: 3rem;
+}
+.btn {
+  --tw-border-opacity: 1;
+  --tw-bg-opacity: 1;
+  --tw-text-opacity: 1;
+  align-items: center;
+  -webkit-animation: button-pop .25s ease-out;
+  animation: button-pop .25s ease-out;
+  -webkit-animation: button-pop var(--animation-btn,.25s) ease-out;
+  animation: button-pop var(--animation-btn,.25s) ease-out;
+  background-color: hsl(0 0% 93%/var(--tw-bg-opacity));
+  background-color: hsl(var(--b2)/var(--tw-bg-opacity));
+  border-color: transparent;
+  border-color: hsl(var(--b2)/var(--tw-border-opacity));
+  border-radius: .5rem;
+  border-radius: var(--rounded-btn,.5rem);
+  border-width: 1px;
+  border-width: var(--border-btn,1px);
+  color: hsl(146 0% 19%/var(--tw-text-opacity));
+  color: hsl(var(--bc)/var(--tw-text-opacity));
+  cursor: pointer;
+  display: inline-flex;
+  flex-shrink: 0;
+  flex-wrap: wrap;
+  font-size: .875rem;
+  font-weight: 600;
+  gap: .5rem;
+  height: 3rem;
+  justify-content: center;
+  line-height: 1em;
+  min-height: 3rem;
+  outline-color: #303030;
+  outline-color: hsl(var(--bc)/1);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: center;
+  text-decoration-line: none;
+  text-transform: uppercase;
+  text-transform: var(--btn-text-case,uppercase);
+  transition-duration: .2s;
+  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,-webkit-transform,-webkit-filter,-webkit-backdrop-filter;
+  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
+  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter,-webkit-transform,-webkit-filter,-webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  transition-timing-function: cubic-bezier(0,0,.2,1);
+  -webkit-user-select: none;
+  user-select: none;
+}
+[role="button"] button {
+  cursor: pointer;
+}
+
+[type="button"] [type="reset"] [type="submit"] button {
+ 
+  background-color: initial;
+  background-image: none;
+}
+button, select {
+  text-transform: none;
+}
+button, input, optgroup, select, textarea {
+  -webkit-font-feature-settings: inherit;
+  font-feature-settings: inherit;
+  color: inherit;
+  font-family: inherit;
+  font-size: 100%;
+  font-variation-settings: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+.btn-info, .btn-info .btn-active {
+  background-color: hsl(581 48% 50%/var(--tw-bg-opacity));
+  /* background-color: hsl(var(--in)/var(--tw-bg-opacity)); */
+  border-color: hsl(var(--in)/var(--tw-border-opacity));
+}
+.btn-info {
+  --tw-border-opacity: 1;
+  --tw-bg-opacity: 1;
+  --tw-text-opacity: 1;
+  color: hsl(190 35% 12%/var(--tw-text-opacity));
+  color: hsl(var(--inc)/var(--tw-text-opacity));
+  outline-color: #00bdd6;
+  outline-color: hsl(var(--in)/1);
+}
+.btn-circle {
+  border-radius: 9999px;
+  height: 3rem;
+  padding: 0;
+  width: 3rem;
+}
+.btn-secondary {
+  --tw-border-opacity: 1;
+  --tw-bg-opacity: 1;
+  --tw-text-opacity: 1;
+  background-color: hsl(183 95% 21%/var(--tw-bg-opacity));
+  /* background-color: hsl(var(--s)/var(--tw-bg-opacity)); */
+  border-color: hsl(var(--s)/var(--tw-border-opacity));
+  color: hsl(210 1% 82%/var(--tw-text-opacity));
+  color: hsl(var(--sc)/var(--tw-text-opacity));
+  outline-color: #2d2e2f;
+  outline-color: hsl(var(--s)/1);
+}
+.gap-y-4 {
+  row-gap: 1rem;
+}
+.justify-items-center {
+  justify-items: center;
+}
+.grid-cols-4 {
+  grid-template-columns: repeat(4,minmax(0,1fr));
+}
+.w-full {
+  width: 100%;
+}
+.grid {
+  display: grid;
+}
+.row-span-2 {
+  grid-row: span 2/span 2;
+}
+@media (hover: hover) {
+  .btn-accent:hover, .btn-info:hover {
+    --tw-border-opacity: 1;
+    --tw-bg-opacity: 1;
+  }
+}
+@media (hover: hover) {
+  .btn-accent:hover {
+    background-color: hsl(142 71% 38%/var(--tw-bg-opacity));
+    background-color: hsl(var(--af)/var(--tw-bg-opacity));
+    border-color: hsl(var(--af)/var(--tw-border-opacity));
+  }
+}
+@media (hover: hover) {
+  .btn-secondary:hover, .btn:hover {
+    --tw-border-opacity: 1;
+    --tw-bg-opacity: 1;
+  }
+}
+@media (hover: hover) {
+  .btn:hover {
+    background-color: hsl(0 0% 86%/var(--tw-bg-opacity));
+    background-color: hsl(var(--b3)/var(--tw-bg-opacity));
+    border-color: hsl(var(--b3)/var(--tw-border-opacity));
+  }
+}
+.h-auto {
+  height: auto;
+}
+.row-span-2 {
+  grid-row: span 2/span 2;
+}
+.btn-accent {
+  --tw-text-opacity: 1;
+  background-color: hsl(406 100% 59%/var(--tw-bg-opacity));
+  /* background-color: hsl(var(--a)/var(--tw-bg-opacity)); */
+  border-color: hsl(var(--a)/var(--tw-border-opacity));
+  color: hsl(131 32% 12%/var(--tw-text-opacity));
+  color: hsl(var(--ac)/var(--tw-text-opacity));
+  outline-color: #21c45d;
+  outline-color: hsl(var(--a)/1);
+}
+@media (hover: hover) {
+  .btn-secondary:hover {
+    background-color: hsl(210 2% 11%/var(--tw-bg-opacity));
+    background-color: hsl(var(--sf)/var(--tw-bg-opacity));
+    border-color: hsl(var(--sf)/var(--tw-border-opacity));
+  }
+}
+@media (hover: hover) {
+  .btn-secondary:hover, .btn:hover {
+    --tw-border-opacity: 1;
+    --tw-bg-opacity: 1;
+  }
+}
+.w-11\/12 {
+  width: 91.666667%;
+}
+.col-span-2 {
+  grid-column: span 2/span 2;
 }
