--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* @import url('../tailwind.config.js');
+@import url('../node_modules/tailwindcss/base.css');
+@import url('../node_modules/tailwindcss/components.css');
+@import url('../node_modules/tailwindcss/utilities.css'); */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
